import java.awt.*;

@FunctionalInterface
public interface RgbToGrayscaleFunc {
    float rgbToGrayscale(Color c);
}

