
@FunctionalInterface
public interface WeightFunc {
    float weight(Pixel p1, Pixel p2);
}

